--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 
-created by = ["Haliunaa Munkhuu"]
+created_by = ["Haliunaa Munkhuu"]
 language = "en"
 multilingual = false
 src = "src"
